--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -22,3 +22,38 @@ jobs:
         with:
           name: apks
           path: app/build/outputs/apk/release/*.apk
+
+name: Build APK
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+
+      - name: Set up Gradle 8.2
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: "8.2"
+
+      - name: Build Release APK
+        run: |
+          gradle assembleRelease
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: ElginPrinterBridge-APK
+          path: app/build/outputs/apk/release/*.apk
